[package]
name = "tokio-tower"
version = "0.2.0-alpha.2"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Bridging the protocol gap between Tokio and Tower"
repository = "https://github.com/tower-rs/tokio-tower.git"

keywords = ["tokio", "tower", "asynchronous", "protocol", "transport"]
categories = ["asynchronous", "network-programming"]

license = "MIT"

[badges]
azure-devops = { project = "tower-rs/tokio-tower", pipeline = "tokio-tower", build = "4" }

[features]
log = ["tracing/log"]
default = ["tracing"]

[dependencies]
tower-service = "=0.3.0-alpha.2"
tower-load = "=0.3.0-alpha.2"
futures-util-preview = "=0.3.0-alpha.19"
futures-core-preview = "=0.3.0-alpha.19"
futures-sink-preview = "=0.3.0-alpha.19"
tokio-executor = "=0.2.0-alpha.6"
tokio-sync = "=0.2.0-alpha.6"
crossbeam = "0.7"
tracing = { version = "0.1.2", optional = true }
pin-project = "0.4.0"

[dev-dependencies]
tokio = "=0.2.0-alpha.6"
serde = "1.0"
serde_derive = "1.0"
async-bincode = "=0.5.0-alpha.3"
slab = "0.4"
tokio-test = "=0.2.0-alpha.6"
