[package]
name = "tokio-tower"
version = "0.3.4"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Bridging the protocol gap between Tokio and Tower"
repository = "https://github.com/tower-rs/tokio-tower.git"

keywords = ["tokio", "tower", "asynchronous", "protocol", "transport"]
categories = ["asynchronous", "network-programming"]

license = "MIT"

[badges]
azure-devops = { project = "tower-rs/tokio-tower", pipeline = "tokio-tower", build = "4" }

[features]
log = ["tracing/log"]
default = []

[dependencies]
tower-service = "0.3"
tower-load = "0.3"
futures-util = { version = "0.3", features = [ "sink" ] }
futures-core = "0.3"
futures-sink = "0.3"
tokio = { version = "0.2", features = [ "sync" ] }
crossbeam = "0.7"
tracing = "0.1.2"
pin-project = "0.4.0"

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros", "tcp", "dns", "rt-core" ] }
serde = "1.0"
serde_derive = "1.0"
async-bincode = "0.5"
slab = "0.4"
tokio-test = "0.2"
tower-test = "0.3"
