[package]
name = "tokio-tower"
version = "0.7.0-rc4"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Bridging the protocol gap between Tokio and Tower"
repository = "https://github.com/tower-rs/tokio-tower.git"

keywords = ["tokio", "tower", "asynchronous", "protocol", "transport"]
categories = ["asynchronous", "network-programming"]

license = "MIT"

[badges]
azure-devops = { project = "tower-rs/tokio-tower", pipeline = "tokio-tower", build = "4" }

[features]
log = ["tracing/log"]
default = []

[dependencies]
tower-service = "0.3"
tower = { version = "0.4", features = ["load"] }
futures-util = { version = "0.3", features = [ "sink" ] }
futures-core = "0.3"
futures-sink = "0.3"
tokio = { version = "1.0", features = [ "sync", "rt" ] }
crossbeam = "0.8"
tracing = "0.1.2"
pin-project = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = [ "full" ] }
serde = "1.0"
serde_derive = "1.0"
async-bincode = "0.6"
slab = "0.4"
tokio-test = "0.4"
tower-test = "0.4"
